--- a/wings/test-output/old/Suite1/methods.html
+++ b/wings/test-output/old/Suite1/methods.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e27370">  <td>18/03/09 13:00:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:0, instance:framework.Login@11bedec]">login</td> 
-  <td>main@81563</td>   <td></td> </tr>
-<tr bgcolor="e27370">  <td>18/03/09 13:01:15</td>   <td>15473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.handle()[pri:0, instance:framework.Login@11bedec]">&lt;&lt;handle</td> 
-<td>&nbsp;</td>  <td>main@81563</td>   <td></td> </tr>
-<tr bgcolor="e3f8b9">  <td>18/03/09 13:01:15</td>   <td>15495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SavingAccountCreation.savingaccount()[pri:0, instance:savingpages.SavingAccountCreation@a14b94]">savingaccount</td> 
-  <td>main@81563</td>   <td></td> </tr>
-<tr bgcolor="e3f8b9">  <td>18/03/09 13:02:13</td>   <td>73383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SavingAccountCreation.handle(org.testng.ITestResult)[pri:0, instance:savingpages.SavingAccountCreation@a14b94]">&lt;&lt;handle</td> 
-<td>&nbsp;</td>  <td>main@81563</td>   <td></td> </tr>
+<tr bgcolor="9bd5b0">  <td>18/03/14 16:55:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:0, instance:framework.Login@e81285]">login</td> 
+  <td>main@33317023</td>   <td></td> </tr>
+<tr bgcolor="9bd5b0">  <td>18/03/14 16:55:21</td>   <td>14609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.handle()[pri:0, instance:framework.Login@e81285]">&lt;&lt;handle</td> 
+<td>&nbsp;</td>  <td>main@33317023</td>   <td></td> </tr>
 </table>
