--- a/wings/test-output/index.html
+++ b/wings/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\sgarlapati\AppData\Local\Temp\testng-eclipse--1876230957\testng-customsuite.xml</span>
+                    <span>C:\Users\sgarlapati\AppData\Local\Temp\testng-eclipse--1714328841\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="usPayments.Login" hash-for-method="logIn">logIn</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="savingpages.SavingAccountCreation" hash-for-method="savingaccount">savingaccount</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,14 +119,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">usPayments.Login</span>
+              <span class="class-name">savingpages.SavingAccountCreation</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="logIn">
-                  </a> <!-- logIn -->
-                  <span class="method-name">logIn</span>
+                  <a name="savingaccount">
+                  </a> <!-- savingaccount -->
+                  <span class="method-name">savingaccount</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sgarlapati\AppData\Local\Temp\testng-eclipse--1876230957\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sgarlapati\AppData\Local\Temp\testng-eclipse--1714328841\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +143,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;usPayments.Login&quot;/&gt;
+      &lt;class name=&quot;savingpages.SavingAccountCreation&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,14 +185,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'logIn')
-data.setCell(0, 2, 'usPayments.Login')
-data.setCell(0, 3, 1745124);
+data.setCell(0, 1, 'savingaccount')
+data.setCell(0, 2, 'savingpages.SavingAccountCreation')
+data.setCell(0, 3, 7814);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 29 minutes</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -218,11 +218,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">usPayments.Login</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">logIn</span>
+              <div class="chronological-class-name">savingpages.SavingAccountCreation</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">login</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="test-method">
+                <span class="method-name">savingaccount</span>
+                <span class="method-start">9377 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">handle([TestResult name=savingaccount status=SUCCESS method=SavingAccountCreation.savingaccount()[pri:0, in...)</span>
+                <span class="method-start">17192 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
