--- a/wings/test-output/old/Default suite/methods.html
+++ b/wings/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bfbc86">  <td>18/03/22 19:16:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.logIn()[pri:0, instance:usPayments.Login@883ce7]">logIn</td> 
-  <td>main@29313931</td>   <td></td> </tr>
+<tr bgcolor="bfbc86">  <td>18/03/26 17:47:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SavingAccountCreation.login()[pri:0, instance:savingpages.SavingAccountCreation@137fd8f]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24193940</td>   <td></td> </tr>
+<tr bgcolor="bfbc86">  <td>18/03/26 17:47:39</td>   <td>9375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SavingAccountCreation.savingaccount()[pri:0, instance:savingpages.SavingAccountCreation@137fd8f]">savingaccount</td> 
+  <td>main@24193940</td>   <td></td> </tr>
+<tr bgcolor="bfbc86">  <td>18/03/26 17:47:47</td>   <td>17191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SavingAccountCreation.handle(org.testng.ITestResult)[pri:0, instance:savingpages.SavingAccountCreation@137fd8f]">&lt;&lt;handle</td> 
+<td>&nbsp;</td>  <td>main@24193940</td>   <td></td> </tr>
 </table>
