--- a/wings/test-output/old/Suite1/methods-alphabetical.html
+++ b/wings/test-output/old/Suite1/methods-alphabetical.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bfbc86">  <td>18/03/21 14:37:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login.handle()[pri:0, instance:framework.Login@fed156]">&lt;&lt;handle</td> 
-<td>&nbsp;</td>  <td>main@25957153</td>   <td></td> </tr>
-<tr bgcolor="bfbc86">  <td>18/03/21 14:36:40</td>   <td>-28547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.login()[pri:0, instance:framework.Login@fed156]">login</td> 
-  <td>main@25957153</td>   <td></td> </tr>
+<tr bgcolor="bfbc86">  <td>18/03/26 17:37:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SilverScreen.testing()[pri:0, instance:waste.SilverScreen@883ce7]">testing</td> 
+  <td>main@10594517</td>   <td></td> </tr>
 </table>
