--- a/wings/test-output/index.html
+++ b/wings/test-output/index.html
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Suite1">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="usPayments.Login" hash-for-method="logIn(login.xls)">logIn(login.xls)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="usPayments.Login" hash-for-method="logIn(onviewpaymentsmanager609navigations.xls)">logIn(onviewpaymentsmanager609navigations.xls)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite1 -->
@@ -124,10 +124,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="logIn(login.xls)">
-                  </a> <!-- logIn(login.xls) -->
+                  <a name="logIn(onviewpaymentsmanager609navigations.xls)">
+                  </a> <!-- logIn(onviewpaymentsmanager609navigations.xls) -->
                   <span class="method-name">logIn</span>
-                  <span class="parameters">(login.xls)</span>
+                  <span class="parameters">(onviewpaymentsmanager609navigations.xls)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -143,7 +143,7 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite1&quot; parallel=&quot;none&quot;&gt;
   &lt;test name=&quot;loans&quot;&gt;
-    &lt;parameter name=&quot;excelName&quot; value=&quot;login.xls&quot;/&gt;
+    &lt;parameter name=&quot;excelName&quot; value=&quot;onviewpaymentsmanager609navigations.xls&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;usPayments.Login&quot;/&gt;
     &lt;/classes&gt;
@@ -189,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'logIn')
 data.setCell(0, 2, 'usPayments.Login')
-data.setCell(0, 3, 37631);
+data.setCell(0, 3, 2383286);
 window.suiteTableData['Suite1']= { tableData: data, tableDiv: 'times-div-Suite1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 37 seconds</span>
+              <span class="suite-total-time">Total running time: 39 minutes</span>
               <div id="times-div-Suite1">
               </div> <!-- times-div-Suite1 -->
             </div> <!-- times-div -->
@@ -222,7 +222,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">usPayments.Login</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">logIn(login.xls)</span>
+                <span class="method-name">logIn(onviewpaymentsmanager609navigations.xls)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
